# TempQChainDomiknows

./: pyproject.toml
src/tempQchain/: main.py  temporal.py  temporal_FR.py  temporal_YN.py  temporal_fr.py  temporal_yn.py  utils.py
src/tempQchain/data/: create_tb_dense.py  utils.py
src/tempQchain/graphs/: graph_fr.py  graph_yn.py
src/tempQchain/patches/: lossprogram.py  program.py
src/tempQchain/programs/: models.py  program.py  program_fr.py  program_yn.py
src/tempQchain/readers/: temporal_reader.py  utils.py
tests/readers/: conftest.py  test_temporal_reader.py
