[project]
name = "tempQchain"
version = "0.1.0"
description = "An adaptation of the Q-chain approach used for Spartun"
authors = [{ name = "Max Moser", email = "maxmoser.15@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "domiknows>=1.0.0",
    "peft>=0.10.0",
    "pandas>=2.3.2",
    "numpy>=1.26.4",
    "sentencepiece>=0.2.1",
    "torch>=2.2.1",
    "tqdm>=4.66.2",
    "transformers>=4.48.0",
    "spacy>=3.8.0",
    "accelerate>=1.10.1",
    "python-dotenv>=1.1.0,<2.0.0",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0,<6",
    "beautifulsoup4>=4.13.4",
    "lxml>=6.0.0",
    "ipykernel>=6.30.0",
    "typer>=0.9.4",
    "click<8.2.0",
    "scikit-learn>=1.6.1",
    "mlflow>=3.4.0",
]

[project.scripts]
q-chain = "tempQchain.main:app"


[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests"
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
# Ignore graph tests from default pytest run
addopts = [
    "-ra",
    "--ignore=tests/graphs",
    "-v",
    "--strict-markers",
]
markers = [
    "graphs: Graph tests requiring isolation (excluded from default run)",
]
pythonpath = [
    ".",
    "src",
    "tests"
]

[tool.coverage.run]
branch = true
source = [
    "src"
]

[tool.coverage.report]
show_missing = true
skip_covered = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
extend-select = ["I"]
